修复样式和切换无法选中的问题

--- a/.vitepress/theme/styles/custom.css
+++ b/.vitepress/theme/styles/custom.css
@@ -11,6 +11,7 @@ body {
   text-align: justify;
 }
 
+
 /* 滚动条 */
 ::-webkit-scrollbar {
   width: 7px;
@@ -52,3 +53,9 @@ body {
     } */
   }
 
+
+
+
+/* a.VPLink.link.active {
+  color: #42b883 !important;
+} */
