布局样式优化完成

--- a/.vitepress/theme/styles/vitepress.scss
+++ b/.vitepress/theme/styles/vitepress.scss
@@ -52,7 +52,7 @@
 .VPHome .VPFeatures .container {
   max-width: 1152px !important;
   margin: 0 auto !important;
-  padding: 0 40px !important;
+  padding: 30px 40px 0 !important;
 }
 .VPHome .VPHero {
   max-width: none !important;
@@ -442,3 +442,4 @@ body::-webkit-scrollbar,
 .social-links {
   margin-right: 40px !important;
 }
+
